--- a/src/Pages/Search.css
+++ b/src/Pages/Search.css
@@ -1,3 +1,4 @@
+
 .SearchHead{
     background-color: #f9f9f9;
     width: 100dvmax;
@@ -6,12 +7,26 @@
     align-items: center;
     position: absolute;
     top: 0px;
+
+}
+
+.buttonset{
+    margin-left: 25lh;
+
+}
+
+.Donate{
+    background-color: orange;
+    opacity: 100%;
 }
 
 h1{
     color: black;
+    font-family: MyFont;
+    font-size: large;
 }
 button{
-    background-color: #888888;
+    background-color: #f1f1f1;
     color: #1a1a1a;
+    margin: 30px;
 }
