--- a/src/Pages/Scorecard.css
+++ b/src/Pages/Scorecard.css
@@ -67,6 +67,11 @@ html, body {
 
 }
 
+.ratingStar{
+    width: 30px;
+    height: 30px;
+}
+
 .left button{
     display: flex;
     justify-content: center;
@@ -116,7 +121,7 @@ html, body {
     text-align: left;
 }
 .th2{
-    width: 100px;
+    width: 160px;
 }
 
 .numRow{
