--- a/src/Pages/HospitalScore.css
+++ b/src/Pages/HospitalScore.css
@@ -104,6 +104,7 @@
     cursor: pointer;
     width: 100%;
     transition: background-color 0.3s ease;
+    margin-left:auto
 }
 
 .map-button:hover {
@@ -121,7 +122,7 @@
 
 .emory-header {
     background-color: #f8f9fa;
-    padding: 30px;
+    /* padding: 30px; */
     text-align: center;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -316,4 +317,8 @@
     .section-content {
         padding: 15px 20px;
     }
+}
+
+.hospitalLogo{
+    height: 10rem;
 }
