--- a/src/Pages/Comparison.css
+++ b/src/Pages/Comparison.css
@@ -115,6 +115,9 @@
 }
 
 .left button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #6fb353;
     text-color: black;
     }
@@ -128,7 +131,7 @@
 }
 .left h6{
     color: black;
-    font-size: 20px;
+    font-size: 17.5px;
     text-align: left;
     font: MyFont;
     padding-top: 10px;
