--- a/src/Pages/Scorecard.css
+++ b/src/Pages/Scorecard.css
@@ -78,8 +78,10 @@ html, body {
 }
 
 .ratingStar{
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
+}
+
 }
 
 .left button{
