--- a/src/Pages/Comparison.module.css
+++ b/src/Pages/Comparison.module.css
@@ -65,17 +65,24 @@
   background-color: #f2f2f2;
 }
 .banner {
+    width: 100%;
+    height: 105px;
     background-color: #6fb353;
-    font: MyFont;
-    text-align: flex;
-    text-margin: auto;
-    text-decoration: around;
-    height: 200px;
-    width: auto;
-    margin-top: -20px;
-    margin-left: -8px;
-    margin-bottom: 20px;
+    box-sizing: border-box;
 }
+
+.banner h1 {
+    padding-top: 30px;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: xx-large;
+    font: MyFont;
+}
+.banner hr {
+    color: #FFFFFF;
+    width: 10%;
+}
+
 .content {
     background-color: #ffffff;
     font: MyFont;
@@ -97,21 +104,22 @@
 
 .container{
     display: flex;
-    justify-content: space-evenly;
-    margin-top: 50px;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin: 50px auto; /* center horizontally */
     margin-bottom: 10px;
-    margin-right: 200px;
-    margin-left: 20px;
+    max-width: 1200px; /* constrain width so content is centered */
+    padding: 0 20px; /* small side padding */
     background-color: #ffffff;
 }
 
 .left{
     display: flex;
     flex-direction: column;
-    justify-content: left;
+    justify-content: flex-start;
     text-align: left;
-    margin-left: 0px;
     margin-top: 20px;
+    flex: 0 0 280px; /* fixed-ish left column width */
 }
 
 .left button{
@@ -148,15 +156,15 @@
 }
 .right{
     display: flex;
-    justify-content: right;
+    justify-content: flex-end;
     margin-top: 5px;
-    margin-right: 100px;
     background-color: #ffffff;
     font: MyFont;
-    text-color: #042069;
+    color: #042069;
     border: 1px solid #ddd;
     border-radius: 8px;
     padding: 20px;
+    flex: 1; /* take remaining horizontal space */
 }
 
 .right h5{
@@ -229,8 +237,7 @@
 .right{
     justify-content: end;
     margin-top: 50px;
-    margin-right: 100px;
-    float: right;
+    /* removed fixed right margin and float so container can center */
 }
 .table, td {
     color: #000000;
