--- a/src/Pages/Navbar.css
+++ b/src/Pages/Navbar.css
@@ -2,7 +2,7 @@
     background-color: #6fb353;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     padding: 12px 20px;
     height: 60px;
     box-sizing: border-box;
@@ -13,6 +13,7 @@
     font-weight: bold;
     font-size: 14px;
     letter-spacing: 0.5px;
+    text-align: center;
 }
 
 .navbar-nav {
