back to  homepage

--- a/src/Pages/Navbar.css
+++ b/src/Pages/Navbar.css
@@ -75,6 +75,11 @@
     color: #999;
 }
 
+.back-to-gwatch{
+    position: absolute;
+    left: 20px;
+}
+
 /* Hamburger menu label */
 label[for='menu'] {
     display: none;
