Fixed mobile issues along with other CSS bugs.

--- a/src/Pages/Scorecard.css
+++ b/src/Pages/Scorecard.css
@@ -28,7 +28,7 @@ html, body {
     padding-top: 30px;
     color: #FFFFFF;
     text-align: center;
-    font-size: xxx-large;
+    font-size: larger;
 }
 .banner hr{
     color: #FFFFFF;
@@ -68,7 +68,7 @@ html, body {
     display: block;
     align-items: center;
     margin-top:60px;
-    margin-left:50px;
+    margin-left:15px;
     position: sticky;
     top: 20px;
     align-self: flex-start;
@@ -109,6 +109,7 @@ html, body {
     max-height: 50px;
     margin: 10px;
     text-align: center;
+    margin-left: 0;
 }
 
 .filter{
@@ -121,7 +122,6 @@ html, body {
 
 .filter-dropdown-container {
     position: relative;
-    margin: 10px 0;
 }
 
 .filter button.active-filter {
@@ -136,7 +136,7 @@ html, body {
 }
 
 .filter-dropdown {
-    position: absolute;
+    position: relative;
     top: 100%;
     left: 0;
     right: 0;
@@ -522,10 +522,14 @@ td:last-child {
     
     .left {
         margin-left: 0;
+        align-self: center;
     }
-    
+
     .right {
-        margin-right: 0;
+        margin-left: 0;
+    }
+    .left button {
+        margin-left: 0;
     }
 }
 
@@ -712,7 +716,7 @@ td:last-child {
     
     .left {
         padding: 0 10px;
-        position: static;
+        position: relative;
         max-height: none;
         overflow-y: visible;
     }
