Adjusted the css and the hospital jsx file to introduce the changes demanded by Coordinator. Changed the order of the Hospital About section and made conditional renders for the bedsize, hospital system, and displaying its critical access status

--- a/src/Pages/HospitalScore.css
+++ b/src/Pages/HospitalScore.css
@@ -25,6 +25,12 @@
     gap: 15px;
 }
 
+.mapicon{
+    position: relative;
+    top: 5px;
+
+}
+
 .back-button {
     background-color: #6fb353;
     color: white;
