--- a/src/Pages/Comparison.module.css
+++ b/src/Pages/Comparison.module.css
@@ -325,6 +325,10 @@
       width: 100%;
       border-collapse: collapse;
       background-color: white;
+      margin-top: auto;
+      margin-bottom: auto;
+      margin-left: auto;
+      margin-right: auto;
   }
   
   .comparison-table th,
@@ -332,17 +336,29 @@
       padding: 12px;
       border: 1px solid #000000;
       text-align: center;
+      margin-top: auto;
+      margin-bottom: auto;
+      margin-left: auto;
+      margin-right: auto;
   }
 
   .comparison-table th {
       background-color: #6fb353;
       color: #333;
       font-weight: bold;
+      margin-top: auto;
+      margin-bottom: auto;
+      margin-left: auto;
+      margin-right: auto;
   }
   
   .comparison-table th:first-child {
       background-color: #6fb353;
       color: white;
+      margin-top: auto;
+      margin-bottom: auto;
+      margin-left: auto;
+      margin-right: auto;
   }
   
   /* Star rating styles added for Comparison.jsx */
